--- a/History.txt
+++ b/History.txt
@@ -6,6 +6,7 @@ V0.6.1 - 2023-04-12 (FluBBa)
 	Added defines for the two different chips.
 	Fixed vertical timing.
 	Fixed 16x8 sprites.
+	Fixed periodic irq time selection.
 
 V0.6.0 - 2022-10-04 (FluBBa)
 	Fixed 5885 sprites when screen is flipped.
