--- a/History.txt
+++ b/History.txt
@@ -2,6 +2,9 @@ K005849 revision history
 -=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 
+V0.6.3 - 2026-01-07 (FluBBa)
+	Fixed check of sprites outside screen bounds.
+
 V0.6.2 - 2024-03-09 (FluBBa)
 	Resets more variables.
 
